# PlaygroundEngine

./: .clang-format  .clang-tidy  .editorconfig  .gersemirc  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CMakeLists.txt.DotSettings  CMakePresets.json  EngineDesign.md  README.md  debug-visualizers.natvis
.claude/: settings.json
.claude/agents/: autonomous-worker.md  engine-architect.md
.run/: Scratchpad test.run.xml
PlaygroundBenchmark/: CMakeLists.txt
PlaygroundBenchmark/src/: BenchmarkHarness.cpp  BenchmarkHarness.cppm  main.cpp
PlaygroundEngine/: CMakeLists.txt  World.cpp  World.h
PlaygroundEngine/include/PlaygroundEngine/: Core.h  EntryPoint.h  GameObject.h  Log.h  Verify.h  World.h
PlaygroundEngine/include/PlaygroundEngine/Component/: TransformComponent.h
PlaygroundEngine/src/: App.cpp  App.cppm  ContractHandler.cpp  Diagnostics.cpp  Diagnostics.cppm  Engine.cpp  Engine.cppm  GameObject.cpp  GameObject.cppm  Log.cpp  Log.cppm  PlaygroundEngine.cpp  PlaygroundEngine.cppm  TestClass.cpp  TestClass.cppm  Window.cpp  Window.cppm  WindowBackend.GLFW.cppm  WindowTypes.cppm  World.cpp  World.cppm  main.cpp
PlaygroundEngine/src/Component/: ComponentBase.cpp  ComponentBase.cppm  Components.cppm  TransformComponent.cpp  TransformComponent.cppm
PlaygroundEngine/src/Reflection/: Annotation.cppm  Builder.cppm  Contracts.cppm  DeclarationInfo.cppm  EnumerationInfo.cpp  EnumerationInfo.cppm  Field.cpp  Field.cppm  FieldInfo.cpp  FieldInfo.cppm  FuncInfo.cpp  FuncInfo.cppm  FunctionInfo.cpp  FunctionInfo.cppm  Reflection.cpp  Reflection.cppm  TypeInfo.cpp  TypeInfo.cppm  TypeInfoTraits.cppm  TypeReference.cppm  TypeRegistry.cpp  TypeRegistry.cppm  TypedRef.cppm
PlaygroundEngine/src/Reflection/Builder/: AnnotationsBuilder.cppm  Builder.cppm  BuilderAnnotations.cppm  BuilderCommon.cppm  BuilderFields.cppm  BuilderFunctions.cppm  EnumeratorsBuilder.cppm  FieldsBuilder.cppm  FunctionsBuilder.cppm  MetaCommon.cppm  TraitsBuilder.cppm  TypeBuilder.cppm
PlaygroundEngine/src/Reflection/Builders/: FieldsBuilder.cppm  FunctionsBuilder.cppm  TypeBuilder.cppm
PlaygroundEngine/src/Reflection/Builtins/: Builtins.cppm  EnumerationFacet.cpp  EnumerationFacet.cppm  SequenceFacet.cppm  StringFacet.cppm
PlaygroundEngine/src/Reflection/Builtins/Builders/: EnumerationFacetBuilder.cppm  EnumeratorsBuilder.cppm  SequenceFacetBuilder.cppm  StringFacetBuilder.cppm
PlaygroundEngine/src/Reflection/Core/: BaseInfo.cppm  ConstructorInfo.cppm  ConversionInfo.cppm  Core.cpp  Core.cppm  DeclarationInfo.cppm  DestructorInfo.cppm  EntityInfo.cppm  Facets.cppm  FieldInfo.cpp  FieldInfo.cppm  FunctionInfo.cpp  FunctionInfo.cppm  FunctionSignatureInfo.cppm  MemberPointerInfo.cppm  NamespaceInfo.cppm  NestedTypeInfo.cppm  OperatorInfo.cppm  ParameterInfo.cppm  StaticFieldInfo.cppm  TemplateInfo.cppm  TypeInfo.cpp  TypeInfo.cppm  TypeInfoTraits.cppm  TypeReference.cppm  TypedRef.cppm
PlaygroundEngine/src/Reflection/Core/Builders/: AnnotationsBuilder.cppm  ArgumentBinding.cppm  BasesBuilder.cppm  ConstructorsBuilder.cppm  ConversionsBuilder.cppm  DestructorBuilder.cppm  FacetsBuilder.cppm  FieldsBuilder.cppm  FunctionSignatureBuilder.cppm  FunctionsBuilder.cppm  MemberPointerBuilder.cppm  MetaCommon.cppm  NamespaceBuilder.cppm  NestedTypesBuilder.cppm  OperatorsBuilder.cppm  StaticFieldsBuilder.cppm  TemplateBuilder.cppm  TraitsBuilder.cppm  TypeBuilder.cppm
PlaygroundEngine/src/Reflection/Facets/: EnumerationFacet.cpp  EnumerationFacet.cppm  Facets.cppm  SequenceFacet.cppm  StringFacet.cppm
PlaygroundEngine/src/Reflection/Facets/Builders/: EnumerationFacetBuilder.cppm  EnumeratorsBuilder.cppm  FacetsBuilder.cppm  SequenceFacetBuilder.cppm  StringFacetBuilder.cppm
PlaygroundGame/: CMakeLists.txt  main.cpp
PlaygroundGame/src/: App.cpp  App.cppm  ContractHandler.cpp  PlaygroundGame.cpp
PlaygroundReflection/: CMakeLists.txt
PlaygroundReflection/src/: annotation_registry.h  construction.h  field_printing.h  generic_registry.h  main.cpp  serialization.h  type_exploration.h
PlaygroundTests/: CMakeLists.txt
PlaygroundTests/snapshots/: Derived.snap  Vector2.snap
PlaygroundTests/src/: ContractSeam.cpp  ContractSeam.cppm  ContractsTests.cpp  HarnessSelfVerificationTests.cpp  LogTests.cpp  ReflectionTests.cpp  RuntimeContractTests.cpp  Scratch.cpp  SnapshotHarness.cpp  SnapshotHarness.cppm  SnapshotTests.cpp  TestMain.cpp  VerifyTests.cpp
PlaygroundTests/src/Reflection/: ReflectionAnnotationTests.cpp  ReflectionConstructionTests.cpp  ReflectionEnumTests.cpp  ReflectionExtractionTests.cpp  ReflectionFacetTests.cpp  ReflectionFieldTests.cpp  ReflectionFunctionTests.cpp  ReflectionNamespaceTests.cpp  ReflectionOperatorTests.cpp  ReflectionStringificationTests.cpp  ReflectionTestTypes.cppm  ReflectionTypeGraphTests.cpp  ReflectionTypeInfoTests.cpp
docs/: ApplicationArchitecture.md  CoreConventions.md  CorrectnessAndStandards.md  DebugUISketch.md  EngineBootSketch.md  ReflectionExtraction.md  ReflectionFacets.md  ReflectionInternals.md  ReflectionSystem.md  TestingSystem.md
scripts/: claude-lint-hook.sh  claude-verify-hook.sh  lint.sh  setup-hooks.sh  verify.sh
scripts/hooks/: pre-commit  pre-merge-commit  pre-push
